<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2013 Simon Marquis (http://www.simon-marquis.fr)

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>

    <string name="app_name" translatable="false">Preferences Manager</string>
    <string name="app_name_and_version" translatable="false"><![CDATA[
    <b>Preferences Manager</b>&nbsp;<font color="#888888">v%1$s</font>
    ]]></string>
    <string name="about_body"><![CDATA[
        Preferences Manager is an Open Source application that allows you to seamlessly edit application\'s preferences. If you want more informations about it, follow these links:<br><br>
        <b>&bull;&nbsp;&nbsp;<a href="https://plus.google.com/u/0/communities/112244514442534711821">Google+ Community</a></b> <i>Share your features requests, bugs, …</i><br>
        <b>&bull;&nbsp;&nbsp;<a href="http://simonmarquis.github.io/Android-PreferencesManager/">Github Pages</a></b> <i>Description of the project</i><br>
        <b>&bull;&nbsp;&nbsp;<a href="https://github.com/SimonMarquis/Android-PreferencesManager">Github repository</a></b> <i>Source code of the project</i><br>
        <b>&bull;&nbsp;&nbsp;<a href="http://www.simon-marquis.fr">My personal website</a></b> <i>About me, and other projects</i>
    ]]></string>

    <string name="close">Close</string>
    <string name="exit">Exit</string>

    <string name="no_root_title">Problem detected</string>
    <string name="no_root_message">"Your device doesn't seem to be rooted!\n\n • Is your device rooted?\n • Is BusyBox installed?\n • Has Root Access request been authorized?"</string>
    <string name="no_root_button">Continue</string>

    <string name="popup_edit_message">This file has been modified.\nWould you like to save the changes?</string>
    <string name="toast_shortcut">Shortcut created</string>
    <string name="toast_backup_success">Backup complete</string>
    <string name="toast_backup_fail">Backup failed</string>

    <string name="action_fav">Add to favorites</string>
    <string name="action_shortcut">Create a shortcut</string>
    <string name="action_save_file">Save the file</string>
    <string name="action_change_theme">Change color theme</string>
    <string name="action_unfav">Remove from favorites</string>
    <string name="action_direct_edit">Edit the file</string>
    <string name="action_backup_file">Backup</string>
    <string name="action_restore_file">Restore</string>
    <string name="action_add">Add a preference</string>
    <string name="action_add_int">Integer</string>
    <string name="action_add_string">String</string>
    <string name="action_add_boolean">Boolean</string>
    <string name="action_add_float">Float</string>
    <string name="action_add_long">Long</string>
    <string name="action_add_stringset">StringSet</string>
    <string name="action_add_stringset_entry">Add an entry</string>

    <string name="action_theme_eclipse">Eclipse</string>
    <string name="action_theme_google">Google</string>
    <string name="action_theme_roboticket">Roboticket</string>
    <string name="action_theme_notepad">Notepad++</string>
    <string name="action_theme_netbeans">Netbeans 6++</string>

    <string name="action_size">Font size</string>
    <string name="action_size_extra_small">Extra small</string>
    <string name="action_size_small">Small</string>
    <string name="action_size_medium">Medium</string>
    <string name="action_size_large">Large</string>
    <string name="action_size_extra_large">Extra large</string>

    <string name="save_success">File saved</string>
    <string name="save_fail">The xml file is not valid…</string>

    <string name="hint_key">Key</string>
    <string name="hint_value">Value</string>


    <string name="title_add_boolean">Add a Boolean value</string>
    <string name="title_add_int">Add an Integer value</string>
    <string name="title_add_string">Add a String value</string>
    <string name="title_add_float">Add a Float value</string>
    <string name="title_add_long">Add a Long value</string>
    <string name="title_add_stringset">Add a StringSet value</string>

    <string name="title_edit_boolean">Edit a Boolean value</string>
    <string name="title_edit_int">Edit an Integer value</string>
    <string name="title_edit_string">Edit a String value</string>
    <string name="title_edit_float">Edit a Float value</string>
    <string name="title_edit_long">Edit a Long value</string>
    <string name="title_edit_stringset">Edit a StringSet value</string>

    <string name="dialog_add">Add</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_update">Update</string>
    <string name="dialog_suppr">Delete</string>

    <string name="action_search">Search an app</string>
    <string name="show_system_apps">Show system apps</string>
    <string name="hide_system_apps">Hide system apps</string>
    <string name="light_theme">Light theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="show_popup">About</string>

    <string name="empty_preference_file_valid">No preference for this file</string>
    <string name="empty_preference_file_invalid">This file seems to be broken.\nTry to edit it inline.</string>
    <string name="empty_preference_application">No preference file for this app</string>
    <string name="empty_apps">No apps found</string>
    <string name="loading_apps">Loading your apps</string>
    <string name="loading_preference_application">Scanning preference files</string>

    <string name="preference_unsupported">This preference isn\'t supported…</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="action_sort">Sort</string>
    <string name="action_sort_alpha">Alphabetically</string>
    <string name="action_sort_type">Type</string>
    <string name="action_search_preference">Search a preference</string>
    <string name="action_select_all">Select all</string>
    <string name="action_delete">Delete</string>

    <string name="pick_restore">Select a revision</string>
    <string name="file_restored">Backup restored</string>
</resources>
